--- a/OneDrive/Documents/NYScheduler/home.html
+++ b/OneDrive/Documents/NYScheduler/home.html
@@ -12,6 +12,7 @@
         <nav>
             <a href="login.html">Login</a>
             <a href="appointments.html">Book Appointment</a>
+            <a href="patients.html">Patient Dashbaord</a>
         </nav>
     </header>
     <main>
