Created a doctor dashboard

--- a/OneDrive/Documents/NYScheduler/home.html
+++ b/OneDrive/Documents/NYScheduler/home.html
@@ -13,6 +13,7 @@
             <a href="login.html">Login</a>
             <a href="appointments.html">Book Appointment</a>
             <a href="patients.html">Patient Dashbaord</a>
+            <a href="doctors.html">Doctor Dashbaord</a>
         </nav>
     </header>
     <main>
